Fixed extra header image margin problem on small screen

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -38,7 +38,7 @@ $cool-grey-80: #6F7681;
   background-size: cover;
   display: flex;
   align-items: center;
-  margin-top:64px;
+  margin-top:58px;
 }
 
 .page-container {
